--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,8 @@ next-env.d.ts
 
 # Backend project (has its own git repository)
 /BugTrackerBackend/
+
+# Claude Code memory and configuration files
+CLAUDE.md
+CLAUDE.md.save
+update-claude-memory.sh
